--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,7 @@
 @import './_colors.scss';
 @import './_spacing.scss';
 @import './_margins.scss';
+@import './padding.scss';
 
 body {
   background-color: $orange;
@@ -12,11 +13,7 @@ body {
 .display {
   background: $light-blue;
   border: 1px solid $blue;
-  border-radius: 15px;
-}
-
-.padding {
-  padding: 15px;
+  border-radius: $medium;
 }
 
 .pet-display {
